[gd_scene load_steps=3 format=3 uid="uid://f2imuwxg74oc"]

[ext_resource type="Script" uid="uid://1hk4rhvgcg0k" path="res://main.gd" id="1_32lon"]
[ext_resource type="Script" uid="uid://c7q34yspy05cy" path="res://color_picker.gd" id="2_tb0mp"]

[node name="Main" type="Control"]
custom_minimum_size = Vector2(768, 640)
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(448, 448)
layout_mode = 0
offset_left = 4.0
offset_right = 452.0
offset_bottom = 448.0
script = ExtResource("1_32lon")

[node name="ColorPicker" type="ColorPicker" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 471.0
grow_horizontal = 0
color = Color(0, 0, 0, 1)
color_mode = 3
picker_shape = 3
can_add_swatches = false
color_modes_visible = false
presets_visible = false
script = ExtResource("2_tb0mp")

[node name="hue_slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 507.0
offset_bottom = 523.0
grow_horizontal = 0
min_value = 1.0
max_value = 4.0
value = 3.0
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="Label" type="Label" parent="hue_slider"]
layout_mode = 0
offset_left = 6.0
offset_top = -23.0
offset_right = 87.0
text = "HUE %s"

[node name="lights_slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 557.0
offset_bottom = 573.0
grow_horizontal = 0
min_value = 1.0
max_value = 4.0
value = 4.0
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="Label" type="Label" parent="lights_slider"]
layout_mode = 0
offset_left = 6.0
offset_top = -23.0
offset_right = 87.0
text = "lights %s"

[node name="saturation" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -755.0
offset_top = 557.0
offset_right = -555.0
offset_bottom = 573.0
grow_horizontal = 0
max_value = 1.0
step = 0.05
value = 0.9
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="saturation"]
layout_mode = 0
offset_left = 6.0
offset_top = -23.0
offset_right = 87.0
text = "Saturation %s"

[node name="overlay_lightness" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -537.0
offset_top = 557.0
offset_right = -337.0
offset_bottom = 573.0
grow_horizontal = 0
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="overlay_lightness"]
layout_mode = 0
offset_left = 6.0
offset_top = -23.0
offset_right = 87.0
text = "Overlay lightness %s"

[node name="path_line" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 460.0
offset_right = 422.0
offset_bottom = 491.0

[node name="edit_path" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 425.0
offset_top = 460.0
offset_right = 453.0
offset_bottom = 491.0
text = "...
"

[node name="image_name_line" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 496.0
offset_right = 179.0
offset_bottom = 527.0
text = "img"

[node name="save_image" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 183.0
offset_top = 496.0
offset_right = 266.0
offset_bottom = 527.0
text = "save png
"

[node name="overlay_on" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 591.0
offset_right = 311.0
offset_bottom = 622.0
button_pressed = true
text = "Overlay blending"

[connection signal="value_changed" from="hue_slider" to="TextureRect" method="_on_hue_slider_value_changed"]
[connection signal="value_changed" from="lights_slider" to="TextureRect" method="_on_lightness_slider_value_changed"]
[connection signal="value_changed" from="saturation" to="TextureRect" method="_on_saturation_value_changed"]
[connection signal="value_changed" from="overlay_lightness" to="TextureRect" method="_on_overlay_lightness_value_changed"]
[connection signal="pressed" from="edit_path" to="TextureRect" method="_on_edit_path_pressed"]
[connection signal="pressed" from="save_image" to="TextureRect" method="_on_save_image_pressed"]
[connection signal="toggled" from="overlay_on" to="TextureRect" method="_on_overlay_on_toggled"]
